# zhaopengyou

./: fly.toml  main.py  pyproject.toml  requirements.txt  zhaopengyou.db
app/: database.py  main.py
app/api/: routes.py
app/game/: card.py  constants.py  engine.py  hand.py
app/models/: db.py  schemas.py
app/ws/: handler.py  manager.py
frontend/: game.js  index.html  style.css
tests/: conftest.py  test_calling_phase.py  test_deck.py  test_draw_phase.py  test_hand.py  test_play_phase.py  test_resolution.py
